// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter should render active type 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 svg {
  width: 24px;
  height: 24px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: currentColor;
}

.c5 svg g,
.c5 svg p {
  fill: currentColor;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  border: 2px solid #FFFFFF;
  background: #FFFFFF;
  color: #666666;
}

.c1 .c4 {
  padding: 0 8px;
}

.c1 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c1:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c1:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c1 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c3 {
  margin: 0;
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  border-style: solid;
  border-color: #E5E5E5;
  border-width: 1px;
  border-radius: 4px;
  display: inline-block;
  font-weight: normal;
  background-color: #FAFAFA;
  box-shadow: 0 0;
}

.c0:hover {
  border-color: #E5E5E5;
  box-shadow: none;
}

.c2 {
  font-size: 16px;
  color: #666666;
  background: none;
  border: none;
  font-family: inherit;
  padding: 12px 16px;
  text-align: left;
  cursor: default;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c2 .c4 {
  padding-right: 0;
}

.c6 {
  cursor: pointer;
}

<div
  className="c0"
  type="active"
>
  <button
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <p
      className="c3"
      color="grey5"
      fontSize="sm"
    >
      Label
    </p>
    <div
      className="c4 c5 c6"
      height={24}
      onClick={[Function]}
      width={24}
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M17.85 16.44a.5.5 0 010 .71l-.7.7a.5.5 0 01-.71 0L12 13.41l-4.44 4.44a.5.5 0 01-.71 0l-.7-.7a.5.5 0 010-.71L10.59 12 6.15 7.56a.5.5 0 010-.71l.7-.7a.5.5 0 01.71 0L12 10.59l4.44-4.44a.5.5 0 01.71 0l.7.7a.5.5 0 010 .71L13.41 12z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Filter should render default type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  border: 2px solid #FFFFFF;
  background: #FFFFFF;
  color: #666666;
}

.c1 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c1:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c1:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c1 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c3 {
  margin: 0;
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  border-style: solid;
  border-color: #CCCCCC;
  border-width: 1px;
  border-radius: 4px;
  display: inline-block;
  font-weight: normal;
  background-color: transparent;
  box-shadow: 0 0;
}

.c0:hover {
  border-color: #666666;
}

.c2 {
  font-size: 16px;
  color: #666666;
  background: none;
  border: none;
  font-family: inherit;
  padding: 12px 16px;
  text-align: left;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
  type="default"
>
  <button
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <p
      className="c3"
      color="grey5"
      fontSize="sm"
    >
      Label
    </p>
  </button>
</div>
`;

exports[`Filter should render selected type 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  border: 2px solid #FFFFFF;
  background: #FFFFFF;
  color: #666666;
}

.c1 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c1:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c1:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c1 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c3 {
  margin: 0;
  color: #666666;
  font-size: 16px;
  line-height: 24px;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: 600;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c0 {
  border-style: solid;
  border-color: #4bcade;
  border-width: 1px;
  border-radius: 4px;
  display: inline-block;
  font-weight: bold;
  background-color: transparent;
  box-shadow: inset 0 0 0 1px #4bcade,0 3px 4px 0 rgba(0,0,0,0.07),0 3px 3px -2px rgba(0,0,0,0.06),0 1px 8px 0 rgba(0,0,0,0.10);
}

.c0:hover {
  border-color: #4bcade;
}

.c2 {
  font-size: 16px;
  color: #666666;
  background: none;
  border: none;
  font-family: inherit;
  padding: 12px 16px;
  text-align: left;
}

.c2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
  className="c0"
  type="selected"
>
  <button
    className="c1 c2"
    disabled={false}
    onClick={[Function]}
    size="md"
    type="button"
  >
    <p
      className="c3"
      color="grey5"
      fontSize="sm"
    >
      Label
    </p>
  </button>
</div>
`;
